// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader Component should handle variant loader components: variant: default 1`] = `
<Skeleton
  isDark={false}
  size="md"
/>
`;

exports[`Loader Component should handle variant loader components: variant: skeleton 1`] = `
<Skeleton
  isDark={false}
  size="md"
/>
`;

exports[`Loader Component should handle variant loader components: variant: spinner 1`] = `<Spinner />`;

exports[`Loader Component should handle variant loader components: variant: title 1`] = `
<PageLayout>
  <PageHeader>
    <Skeleton
      isDark={false}
      size="md"
    />
  </PageHeader>
</PageLayout>
`;

exports[`Loader Component should render a non-connected component: non-connected 1`] = `
<Skeleton
  isDark={false}
  size="md"
/>
`;
